Fixed sizing issue on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,6 +36,7 @@ body {
 .wrapper {
 
     position: relative;    
+    min-height: 100vh;
 
     > #wrapper--inner-overlay {
 
@@ -54,7 +55,8 @@ body {
         display: grid;
         grid-template-rows: 40% 60%;
         height: 100vh;
-        z-index: 10;        
+        z-index: 10;    
+        padding: 2em 0;
     }
 }
 
@@ -158,5 +160,4 @@ body {
 
         font-size: 5rem;
     }
-
 }
